--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -4,25 +4,25 @@
     justify-content: center;
     align-items: center;
     width: 1600px;
-    height:400px;
+    height: 400px;
+    overflow: hidden; /* Ensure overflow is hidden */
 }
 
 .slide {
+    position: absolute;
     border-radius: 0.5rem;
     box-shadow: 0px 0px 7px #666;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 1s ease-in-out;
 }
 
-
-.slide-hidden{
-    display: none;
+.slide.active {
+    opacity: 1;
 }
 
 .arrow {
     position: absolute;
+    z-index: 10; /* Ensure arrows are on top of other elements */
     width: 2rem;
     height: 2rem;
     color: white;
@@ -57,9 +57,13 @@
     box-shadow: 0px 0px 5px #555;
     margin: 0 0.2rem;
     cursor: pointer;
-
+    transition: background-color 0.3s ease-in-out;
 }
 
-.indicator-inactive{
+.indicator.active {
+    background-color: black;
+}
+
+.indicator-inactive {
     background-color: grey;
 }
