--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -8,16 +8,55 @@
     overflow: hidden; /* Ensure overflow is hidden */
 }
 
+.slides-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 .slide {
     position: absolute;
+    width: 100%;
+    height: 100%;
     border-radius: 0.5rem;
     box-shadow: 0px 0px 7px #666;
     opacity: 0;
-    transition: opacity 1s ease-in-out;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
 }
 
 .slide.active {
     opacity: 1;
+}
+
+.slide.animating {
+    opacity: 1;
+}
+
+.slide.animating.active {
+    animation-name: slideIn;
+}
+
+.slide.animating:not(.active) {
+    animation-name: slideOut;
+}
+
+@keyframes slideIn {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideOut {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 .arrow {
