--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,4 +1,4 @@
-.carousel {
+.carousel-container {
     position: relative;
     display: flex;
     justify-content: center;
@@ -6,103 +6,39 @@
     width: 1600px;
     height: 400px;
     overflow: hidden; /* Ensure overflow is hidden */
-}
-
-.slides-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     border-radius: 0.5rem;
-    box-shadow: 0px 0px 7px #666;
-    opacity: 0;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-}
-
-.slide.active {
-    opacity: 1;
-}
-
-.slide.animating {
-    opacity: 1;
-}
-
-.slide.animating.active {
-    animation-name: slideIn;
-}
-
-.slide.animating:not(.active) {
-    animation-name: slideOut;
-}
-
-@keyframes slideIn {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(0);
-    }
-}
-
-@keyframes slideOut {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-
-.arrow {
+  }
+  
+  .carousel-wrapper {
+    display: flex; /* Allow multiple images side-by-side */
+    width: 100%;  /* Take up full width of container */
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .carousel-slide {
+    width: 100%; /* Each image takes up full width of carousel */
+    height: 100%;
+    object-fit: cover; /* Adjust image fitting as needed */
+  }
+  
+  .carousel-controls {
     position: absolute;
-    z-index: 10; /* Ensure arrows are on top of other elements */
-    width: 2rem;
-    height: 2rem;
-    color: white;
-    filter: drop-shadow(0px 0px 5px #555);
-}
-
-.arrow:hover {
-    cursor: pointer;
-}
-
-.arrow-left {
-    left: 1rem;
-}
-
-.arrow-right {
-    right: 1rem;
-}
-
-.indicators {
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
-    position: absolute;
-    bottom: 1rem;
-}
-
-.indicator {
-    background-color: white;
-    height: 0.5rem;
-    width: 0.5rem;
-    border-radius: 100%;
+    justify-content: space-between;
+  }
+  
+  .carousel-controls button {
+    background-color: transparent;
     border: none;
-    outline: none;
-    box-shadow: 0px 0px 5px #555;
-    margin: 0 0.2rem;
+    color: white;
     cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-}
-
-.indicator.active {
-    background-color: black;
-}
-
-.indicator-inactive {
-    background-color: grey;
-}
+    padding: 5px 10px;
+  }
+  
+  .carousel-controls button:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  
