--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  background-color: #fefefe;
+  /* background-color: #fefefe; */
+  background-color: #fff;
   height: 100%;
   width: 100%;
 }
