--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,6 +3,7 @@
 }
 
 nav {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,6 +12,7 @@ nav {
     position: sticky;   
     top: 0;
     padding: 0px 1%;
+    z-index: 2;
 }
 
 nav .title {
