--- a/src/components/genres/GenreCarousel.css
+++ b/src/components/genres/GenreCarousel.css
@@ -47,22 +47,26 @@
 }
 
 .book {
-  width: calc(25% - 5px);
+  
+  
   /* 4 books = 25% each (adjust based on design) */
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
+  flex-direction: column; /* Change to column for stacking */
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 4px;
   background-color: #F4F4FF;
-  height: 250px;
+  height: 350px;
+  width: 300px;
   position: relative;
 }
 
 .book img {
-  width: 50%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
   object-fit: cover;
+  margin: 0 auto;
 }
 
 .wishlist-icon {
@@ -80,23 +84,30 @@
 
 .book-info {
   text-align: left;
-  width: 50%;
-  /* Adjust width as needed */
+  width: 100%;
+  margin-top: 5px;
   padding: 5px;
-  /* Add some padding for readability */
-  flex: 1;
-  /* Enable flexbox for wrapping */
+}
+
+.book-info .price {
+  font-weight: bold;
+  color: #b12a1b;
+  /* Set a different color for the price */
+  /* Position the price at the bottom */
   
-
-
+  /* Position the price at the bottom */
+  bottom: 10px;
+  /* Adjust positioning as needed */
+  /* Position to the left edge of the book container */
+  font-size: 18px;  /* Increase price font size */
+  margin-top: 5px;  /* Add margin for separation */
 }
 
 
-
-
 .book-info h3 {
-  font-size: 20px;
-  margin-bottom: 5px;
+  font-size: 13px;
+  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .book-info p,
@@ -116,18 +127,7 @@
  font-size: 16px;
  } */
 
-.book-info .price {
-  font-weight: bold;
-  color: #b12a1b;
-  /* Set a different color for the price */
-  /* Position the price at the bottom */
-  position: absolute;
-  /* Position the price at the bottom */
-  bottom: 10px;
-  /* Adjust positioning as needed */
-  /* Position to the left edge of the book container */
-  font-size: 16px;
-}
+
 
 .book-info .book-buttons {
   position: absolute;
