--- a/src/components/genres/GenreCarousel.css
+++ b/src/components/genres/GenreCarousel.css
@@ -87,6 +87,9 @@
   width: 100%;
   margin-top: 5px;
   padding: 5px;
+  display: flex; /* Wrap elements horizontally */
+  flex-direction: column; /* Stack elements vertically */
+  justify-content: space-between; /* Space out content vertically */
 }
 
 .book-info .price {
@@ -101,6 +104,7 @@
   /* Position to the left edge of the book container */
   font-size: 18px;  /* Increase price font size */
   margin-top: 5px;  /* Add margin for separation */
+  
 }
 
 
@@ -128,8 +132,22 @@
  } */
 
 
+ .book-info button.add-to-cart {
 
+
+  background-color: #e95241; /* Adjust button color */
+  color: #fff; /* Adjust button text color */
+  padding: 5px 10px; /* Adjust padding */
+  border: none; /* Remove border for cleaner look */
+  border-radius: 4px;
+  cursor: pointer; /* Indicate clickable button */
+  position: absolute;
+  position: absolute;
+  bottom: 10px;
+  margin: auto;
+}
+/* 
 .book-info .book-buttons {
   position: absolute;
   bottom: 10px;
-}
+} */
