--- a/src/components/genres/GenreCarousel.css
+++ b/src/components/genres/GenreCarousel.css
@@ -163,8 +163,28 @@
   order: 1;
 }
 
+.button-container button.remove-from-cart {
+
+  background-color: #555555; /* Remove-from-cart button color */
+  color: #fff;
+  padding: 8px 48px;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 10px;
+  order: 1;
+  white-space: nowrap;
+  width: auto;
+  min-width: 200px;
+}
+
 .bookstore .button-container button.add-to-cart:hover {
   background-color: #d74a38; /* Darker shade of the original background color */
+}
+
+.book-info .remove-from-cart:hover {
+  background-color: #333333; /* Hover color for remove-from-cart button */
 }
 
 .button-container .wishlist-icon {
