--- a/src/components/pages/Wishlist/Wishlist.css
+++ b/src/components/pages/Wishlist/Wishlist.css
@@ -1,14 +1,35 @@
-/* WishlistPage.css */
-.wishlist-page {
+/* Wishlist.css */
+
+.wishlist-container {
     padding: 50px;
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
   
-  .wishlist-page h2 {
+  .wishlist-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .wishlist-header h2 {
     font-size: 2rem;
     margin-bottom: 20px;
+  }
+  
+  .clear-wishlist {
+    background-color: #e95241;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+  }
+  
+  .clear-wishlist:hover {
+    background-color: #d74a38;
   }
   
   .wishlist-books {
@@ -29,17 +50,6 @@
     position: relative;
   }
   
-  .wishlist-books .wishlist-book:hover {
-    transform: scale(1.02);
-    transition: all 0.2s ease-in-out;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    border-color: #cccccc;
-  }
-  
-  .wishlist-books .wishlist-book img:hover {
-    cursor: pointer;
-  }
-  
   .wishlist-book img {
     width: 70%;
     height: 70%;
@@ -57,19 +67,6 @@
     justify-content: space-between;
   }
   
-  .wishlist-button-container {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .wishlist-book-info .price {
-    font-weight: bold;
-    color: #b12a1b;
-    font-size: 18px;
-    margin-bottom: 10px;
-    margin-top: 5px;  /* Add margin for separation */
-  }
-  
   .wishlist-book-info h3 {
     white-space: nowrap;
     overflow: hidden;
@@ -79,46 +76,24 @@
     margin-bottom: 5px;
   }
   
-  .wishlist-book-info p,
-  .wishlist-book-info span {
-    font-size: 13px;
-    color: #333;
+  .wishlist-book-info .wishlist-price {
+    font-weight: bold;
+    color: #b12a1b;
+    font-size: 18px;
+    margin-bottom: 10px;
+    margin-top: 5px;  /* Add margin for separation */
   }
   
-  .wishlist-button-container button.wishlist-add-to-cart {
+  .wishlist-book-info button {
     background-color: #e95241;
     color: #fff;
-    padding: 8px 60px;
+    padding: 10px 20px;
     border: none;
     border-radius: 7px;
     cursor: pointer;
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    order: 1;
-    white-space: nowrap;
-    width: auto;
-    min-width: 200px;
   }
   
-  .wishlist-books .wishlist-button-container button.wishlist-add-to-cart:hover {
+  .wishlist-book-info button:hover {
     background-color: #d74a38;
-  }
-  
-  .wishlist-button-container .wishlist-icon {
-    position: absolute;
-    bottom: 15px;
-    color: #ccc;
-    cursor: pointer;
-    order: 2;
-    z-index: 0;
-    right: 20px;
-  }
-  
-  .wishlist-books .wishlist-button-container .wishlist-icon:hover {
-    color: #999;
-    transform: scale(1.1);
-    transition: all 0.2s ease-in-out;
   }
   
