--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,36 +1,103 @@
-.active {
-    background-color: #dedeef;
-}
-
 nav {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff; 
-    /*  */
-    position: sticky;   
-    top: 0;
-    padding: 0px 1%;
+    background-color: transparent;
+    position: sticky;
+    top: 45px;
+    padding: 0px 3%;
     z-index: 2;
+    height: 45px; /* Set a fixed height for the navbar */
+
+    transition: background-color 0.3s, box-shadow 0.3s, 
+    top 0.3s;
+}
+
+.navbar-solid {
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    top: 0px;
+    border: 7px solid #fff;
+    box-sizing: content-box;
+    
+    
+}
+
+.navbar-transparent {
+    background-color: transparent;
+    box-shadow: none;
+}
+
+nav .catalog {
+    display: flex;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    flex-direction: row;
+    align-items: center;
+    border: 2px solid #000;
+    height: 100%; /* Ensure it takes the full height of the navbar */
+    cursor: pointer;
+}
+
+nav .catalog .menu-icon {
+    font-size: 35px;
+}
+
+nav .catalog p {
+    font-size: 18px;
+    margin: 0; /* Remove default margin */
+    padding-left: 0.5rem;
 }
 
 nav .title {
-    font-size: 1.5rem;
-    margin: 1rem;
-    font-weight: bold;
-    text-decoration: none;
-    color: #090937;
+    display: flex;
+    align-items: center;
+    margin: 0 1rem;
+}
+
+nav .title img {
+    height: auto;
+    display: block;
+}
+
+nav .search-box {
+    display: flex;
+    align-items: center;
+    border: 2px solid #000;
+    padding: 5px 20px;
+    color: #000;
+    width: 600px; /* Adjust the search box width */
+    border-radius: 0.5rem;
+    height: 100%; /* Ensure it takes the full height of the navbar */
+    background: rgb(210, 207, 207, 0.2);
+}
+
+nav .search-box input {
+    padding: 6px;
+    background: transparent;
+    border: 0;
+    outline: 0;
+    color: #000;
+    font-size: 18px;
+    flex-grow: 1;
+}
+
+nav .search-box-icon {
+    font-size: 33px;
+    cursor: pointer;
+    margin-left: auto;
 }
 
 nav ul {
     display: flex;
+    align-items: center;
+    height: 100%; /* Ensure it takes the full height of the navbar */
 }
 
 nav ul li {
     list-style: none;
-
 }
+
 nav ul li a {
     display: block;
     text-decoration: none;
@@ -38,94 +105,13 @@ nav ul li a {
     padding: 0.5rem;
     margin: 0 0.5rem;
     border-radius: 0.5rem;
-    background: #F4F4FF;
-    height: 40px;
+}
+
+nav ul li .icons {
+    font-size: 35px; /* Increase the font size */
+    align-items: center;
 }
 
 nav ul li a:not(.active):hover {
     background-color: #f4f4ff80;
-
 }
-
-/* responive hamburger */
-
-nav .menu {
-    display: none;
-    position: absolute;
-    top: 0.75rem;
-    right: 0.5rem;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 2.25rem;
-    height: 2rem;
-}
-
-nav .menu span {
-    height: 0.4rem;
-    width: 100%;
-    background-color: white;
-    border-radius: 0.2rem;
-}
-
-/*  */
-nav .search-box {
-    display: flex;
-    align-items: center;
-    background: #F4F4FF;
-    padding: 5px 20px;
-    color: #090937;
-    opacity: 0.5;
-    width: 670px;
-    position: relative;
-    
-    border-radius: 0.5rem;
-}
-nav .search-box input {
-    padding: 6px;
-    background: transparent;
-    border: 0;
-    outline: 0;
-    color: #090937;
-    font-size: 18px;
-    flex-grow: 1;
-  }
-  
-nav .search-box-icon {
-    width: 20px;
-    cursor: pointer;
-    margin-left: auto;
-  }
-
-
-/*  */
-@media (max-width: 480px) {
-    nav .menu {
-        display: flex;
-    }
-    nav {
-        flex-direction: column;
-        align-items: start;
-    }
-
-    nav ul {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        margin-bottom: 0.25rem;
-
-    }
-
-    nav ul.open {
-        display: flex;
-    }
-    nav ul li {
-        width: 100%;
-        text-align: center;
-
-    }
-
-    nav ul li a {
-        margin: 0.2rem 0.5rem;
-    }
-}
-
