--- a/src/components/books/Bookstore.css
+++ b/src/components/books/Bookstore.css
@@ -1,74 +1,36 @@
 .bookstore {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column; /* Ensure content stacks vertically */
+  align-items: center; /* Center align content horizontally */
   gap: 20px;
   padding: 50px;
-  
-  /* Adjust border color as needed */
-}
-
-.genre {
-  background-color: #fff;
-  border-radius: 4px;
-  min-height: 300px;
-  flex-direction: column;
-  /* Stack elements vertically */
-}
-
-
-.genre>div:first-child {
-  display: flex;
-  justify-content: space-between;
-
-}
-
-
-.genre h2 {
-  font-size: 1.7rem;
-  margin-bottom: 20px;
-}
-
-.genre a {
-  text-decoration: none;
-  color: #007bff;
-  font-weight: bold;
-  /* Removed margin-top for better positioning */
-  margin-top: -5px;
-
-
+  font-family: 'Inter', sans-serif;
 }
 
 .books-container {
   display: flex;
-  gap: 30px;
-  /* Adjust width to fit 4 books side-by-side */
-  
-  /* Adjust as needed */
-  padding: 5px;
-  
+  flex-wrap: wrap;
+  gap: 80px;
+  justify-content: center; /* Center books in the container */
+  max-width: 1200px; /* Limit the width of books container */
 }
 
 .book {
-  
-  
-  /* 4 books = 25% each (adjust based on design) */
   display: flex;
-  /* flex-direction: row; */
-  flex-direction: column; /* Change to column for stacking */
+  flex-direction: column;
+  align-items: center;
   padding: 10px;
-  border: 1px solid #ddd;
   border-radius: 4px;
-  background-color: #F4F4FF;
-  height: 350px;
-  width: 285px;
+  background-color: #fff;
+  height: 461px;
+  width: 286px;
   position: relative;
-  
+  font-family: 'Inter';
 }
 
 .bookstore .book:hover {
   transform: scale(1.02); /* Slightly enlarge the image on hover (optional) */
   transition: all 0.2s ease-in-out; /* Smooth transition effect */
-
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Subtle shadow on hover */
   border-color: #cccccc; /* More prominent border color on hover */
 }
@@ -78,96 +40,70 @@
 }
 
 
-
-.book img {
-  width: 70%;
-  height: 70%;
-  object-fit: cover;
-  margin: 0 auto;
+.book .store-img-container{
+  align-items: center;
+  width: 281px;
+  height: 315px;
+  background-color: #fff;
 }
 
-
+.book .store-img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit:contain;
+  margin: 0 auto;
+}
 
 .book-info {
   text-align: left;
   width: 100%;
   margin-top: 5px;
   padding: 5px;
-  display: flex; /* Wrap elements horizontally */
-  flex-direction: column; /* Stack elements vertically */
-  justify-content: space-between; /* Space out content vertically */
-}
-
-.button-container {  /* New styles for button container */
   display: flex;
-  justify-content:space-between; /* Space buttons horizontally */
+  flex-direction: column;
+  justify-content: space-between;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
 
 .book-info .price {
-  font-weight: bold;
-  color: #b12a1b;
-  /* Set a different color for the price */
-  /* Position the price at the bottom */
-  
-  /* Position the price at the bottom */
-  bottom: 10px;
-  /* Adjust positioning as needed */
-  /* Position to the left edge of the book container */
-  font-size: 18px;  /* Increase price font size */
-  margin-top: 5px;  /* Add margin for separation */
-  
+  color: #000000;
+  font-size: 31px;
+  /* margin-top: 5px; */
+}
+
+.book-info p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 18px;
+  margin-bottom: 5px;
 }
 
 
-.book-info h3 {
-  white-space: nowrap; /* Prevent wrapping */
-  overflow: hidden;  /* Hide excess content */
-  text-overflow: ellipsis; /* Add ellipsis (...) */
-  
-  /* Adjust font size as needed to accommodate longer titles in two lines */
-  font-size: 12.5px; /* Example adjustment */
-  line-height: 1.2; /* Adjust line height for better two-line display */
-  margin-bottom: 5px; /* Add some margin for separation */
-}
-
-.book-info p,
-.book-info span {
-  font-size: 13px;
-  color: #333;
-}
-
-/* .book-buttons {
- font-weight: bold;
- color: #b12a1b; 
- position: absolute; 
- bottom: 10px; 
- left: calc(50% + 10px);
- 
- width: calc(100% - 20px);
- font-size: 16px;
- } */
-
-
- .button-container button.add-to-cart {
-
-
-  background-color: #e95241; /* Adjust button color */
-  color: #fff; /* Adjust button text color */
-  padding: 8px 75px; /* Adjust padding */
-  border: none; /* Remove border for cleaner look */
+.button-container button.add-to-cart {
+  background-color: #464646;
+  color: #fff;
+  padding: 10px 60px;
+  border: none;
   border-radius: 7px;
-  cursor: pointer; /* Indicate clickable button */
+  cursor: pointer;
   position: absolute;
   bottom: 10px;
   order: 1;
+  min-width: 185px;
+
+ 
 }
 
-.button-container button.remove-from-cart {
 
-  background-color: #555555; /* Remove-from-cart button color */
+.button-container button.remove-from-cart {
+  background-color: #878787;
   color: #fff;
-  padding: 8px 48px;
+  padding: 10px 20px;
   border: none;
   border-radius: 7px;
   cursor: pointer;
@@ -176,43 +112,67 @@
   order: 1;
   white-space: nowrap;
   width: auto;
-  min-width: 200px;
+  min-width: 185px;
 }
 
 .bookstore .button-container button.add-to-cart:hover {
-  background-color: #d74a38; /* Darker shade of the original background color */
+  background-color: #000;
 }
 
 .book-info .remove-from-cart:hover {
-  background-color: #333333; /* Hover color for remove-from-cart button */
+  background-color: #000;
 }
+
+
 
 .button-container .wishlist-icon {
   position: absolute;
-  /* Absolute positioning for top right corner */
-  bottom: 15px;
-  /* Adjust positioning as needed */
-
-  /* Adjust positioning as needed */
-  color: #ccc;
-  /* Adjust color as needed */
+  bottom: 8px;
+  color: #464646;
   cursor: pointer;
-  /* Indicate clickable icon */
   order: 2;
-  z-index: 0;    
+  z-index: 0;
   right: 20px;
+  font-size: 46px; /* Increase the font size */
+  transition: transform 0.2s ease-in-out; /* Add transition for smooth scaling */
 }
 
 .bookstore .button-container .wishlist-icon:hover {
-  color: #999; /* Change color on hover */
-  transform: scale(1.1); /* Optional: Slightly enlarge the icon on hover */
-  transition: all 0.2s ease-in-out; /* Smooth transition effect */
+  color: #999;
+  transform: scale(1.1);
+  transition: all 0.2s ease-in-out;
 }
 
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px; /* Add some margin between books and pagination */
+  width: 100%; /* Ensure pagination spans full width */
+}
 
+.pagination button {
+  margin: 0 5px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #fff;
+  color: #000;
+  
+  font-size: 15px; /* Increase the font size */
+  transition: background-color;
+}
 
-/* 
-.book-info .book-buttons {
-  position: absolute;
-  bottom: 10px;
-} */
+.pagination button.active {
+  background-color: #a5a5a5;
+}
+
+.pagination button:hover {
+  background-color: #cecdcd;
+}
+
+.pagination .ellipsis {
+  margin: 0 5px;
+  padding: 10px 0;
+  vertical-align: baseline; /* Align ellipses to the baseline */
+}
