--- a/src/components/books/Bookstore.css
+++ b/src/components/books/Bookstore.css
@@ -75,6 +75,12 @@
   /* margin-top: 5px; */
 }
 
+h2 {
+  padding-top: 10px;
+  text-align: center;
+  font-size: 45px;
+}
+
 .book-info p {
   white-space: nowrap;
   overflow: hidden;
