--- a/src/components/pages/Wishlist/Wishlist.css
+++ b/src/components/pages/Wishlist/Wishlist.css
@@ -1,99 +1,36 @@
 /* Wishlist.css */
 
 .wishlist-container {
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .wishlist-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .wishlist-header h2 {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-  
-  .clear-wishlist {
-    background-color: #e95241;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 7px;
-    cursor: pointer;
-  }
-  
-  .clear-wishlist:hover {
-    background-color: #d74a38;
-  }
-  
-  .wishlist-books {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-  
-  .wishlist-book {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    background-color: #F4F4FF;
-    height: 350px;
-    width: 285px;
-    position: relative;
-  }
-  
-  .wishlist-book img {
-    width: 70%;
-    height: 70%;
-    object-fit: cover;
-    margin: 0 auto;
-  }
-  
-  .wishlist-book-info {
-    text-align: left;
-    width: 100%;
-    margin-top: 5px;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  
-  .wishlist-book-info h3 {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 12.5px;
-    line-height: 1.2;
-    margin-bottom: 5px;
-  }
-  
-  .wishlist-book-info .wishlist-price {
-    font-weight: bold;
-    color: #b12a1b;
-    font-size: 18px;
-    margin-bottom: 10px;
-    margin-top: 5px;  /* Add margin for separation */
-  }
-  
-  .wishlist-book-info button {
-    background-color: #e95241;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 7px;
-    cursor: pointer;
-  }
-  
-  .wishlist-book-info button:hover {
-    background-color: #d74a38;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 50px;
+  font-family: 'Inter', sans-serif;
+}
+
+.wishlist-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.wishlist-header h2 {
+  font-size: 2rem;
+}
+
+.clear-wishlist {
+  background-color: #e95241;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.clear-wishlist:hover {
+  background-color: #d74a38;
+}
