--- a/src/components/books/genre/GenrePage.css
+++ b/src/components/books/genre/GenrePage.css
@@ -11,3 +11,9 @@
     font-size: 1.7rem;
     margin-bottom: 20px;
   }
+
+.genre-name {
+    padding-top: 10px;
+    text-align: center;
+    font-size: 45px;
+  }
