--- a/src/components/books/details/BookDetailsPage.css
+++ b/src/components/books/details/BookDetailsPage.css
@@ -6,11 +6,13 @@
   padding: 20px;
   flex-direction: column;
   /* Adjust to stack elements vertically */
+  justify-content: center;
 }
 
 .book-details-title {
+  margin: 0 auto;
   font-size: 32px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   /* Adjust spacing between title and cover */
 }
 
@@ -37,8 +39,8 @@
 
 .book-cover-background {
   
-  width: 300px;
-  height: 330px;
+  width: 350px;
+  height: 380px;
   /* background-color: aqua; */
   /* border: 2px solid black; */
   
@@ -68,6 +70,18 @@
 
 .book-details-header {
   margin-bottom: 20px;
+  
+  overflow: hidden; /* Add overflow:hidden to hide overflowing content */
+  text-overflow: ellipsis; /* Add text-overflow:ellipsis to show ellipses */
+
+
+  display: -webkit-box; /* For Safari, Chrome, etc. */
+  -webkit-line-clamp: 8; /* Adjust number of lines as needed */
+  -webkit-box-orient: vertical; /* For Safari, Chrome, etc. */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* Fallback for browsers not supporting line-clamp */
+
 }
 
 .characteristics {
@@ -112,7 +126,7 @@
 .details-button-container {
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 30px;
   /* background-color: #000; */
 }
 
@@ -120,7 +134,7 @@
 .details-add-to-cart {
   background-color: #464646;
   color: #fff;
-  padding: 12px 65px;
+  padding: 12px 84px;
   border: none;
   border-radius: 7px;
   cursor: pointer;
@@ -133,7 +147,7 @@
 .details-button-container .details-remove-from-cart {
   background-color: #878787;
   color: #fff;
-  padding: 12px 36px;
+  padding: 12px 55px;
   border: none;
   border-radius: 7px;
   cursor: pointer;
@@ -155,13 +169,12 @@
 
 .details-button-container .details-wishlist-icon {
   color: #464646;
-  position: absolute;
   cursor: pointer;
   order: 2;
   z-index: 0;
   right: 20px;
   font-size: 46px;
-  bottom: 83px;
+  margin-left: 15px;
   
   transition: transform 0.2s ease-in-out; /* Add transition for smooth scaling */
 }
@@ -171,3 +184,31 @@
   transform: scale(1.1);
   transition: all 0.2s ease-in-out;
 }
+
+
+
+
+
+.recommendations-container {
+  margin-top: 150px; /* Adjust spacing as needed */
+  display: flex;  /* Make the container a flexbox */
+  flex-wrap: wrap; /* Allow items to wrap if they don't fit */
+}
+
+.recommendations-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;  /* Make the list a flexbox */
+}
+
+.recommendations-list li {
+  margin-bottom: 10px;
+  /* Adjust other styles for individual recommendations as needed */
+}
+
+.recommendations-list a {
+  text-decoration: none;
+  color: #333;
+}
+
