--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,9 +7,21 @@ footer {
     flex-direction: column; /* Stack elements vertically */
     align-items: center; /* Center align items horizontally */
     justify-content: center; /* Center align items vertically */
-    height: 300px; /* Adjust height of the footer */
+    min-height: 300px; /* Adjust height of the footer */
+  }
+ 
+  
+
+  .footer {
+    background-color: #464646;
+    color: #fff;
+    padding: 20px;
+    width: 100%;
+    margin-top: auto; /* Push footer to the bottom */
   }
   
+  
+
   /* Style the main content container */
   .footer-content {
     display: flex; /* Enable flexbox for columns within the content */
@@ -58,4 +70,8 @@ footer {
     height: 50px; /* Adjust icon height */
     margin-right: 10px; /* Add some margin between icons */
   }
+  
+
+
+
   
